# mk-rs

./: .gitignore  AGENTS.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  TRACEABILITY.md  cliff.toml  mrc  msh
.githooks/: _common.sh  pre-commit  pre-push
.gitverse/workflows/: ci.yml
.pi/tasks/: tasks-019ecae8-5e2b-76eb-9692-c1bad9c7b058.json  tasks-019ecaf2-cba5-7115-a5dc-2e3bb59efa5d.json  tasks-019ecb13-b68a-716a-9ef3-35117c52692c.json  tasks-019ecb3b-b526-7763-81a2-11f1cfb5b6c3.json  tasks-019ecb3b-b5eb-7071-ad1a-7f485716f98a.json
crates/mk-cli/: Cargo.toml  build.rs
crates/mk-cli/src/: main.rs
crates/mk-core/: Cargo.toml
crates/mk-core/src/: archive.rs  attr.rs  error.rs  graph.rs  include.rs  lex.rs  lib.rs  parse.rs  recipe.rs  sched.rs  shell.rs  var.rs
crates/mk-graph/: Cargo.toml  build.rs
crates/mk-graph/src/: main.rs
crates/mk-shell/: Cargo.toml
crates/mk-shell/src/: lib.rs
docs/: design-f-045.md  duckscript.md  env-file-not-implemented.md  gotchas.md  implementation-comparison.md  mk-hume-1987.md  mk-man-plan9port.md  mk-plan9-hume-flandrena.md  mk-plan9port-code-map.md  mk.1.md  review-2026-06-15.md  review-creative-2026-06-15.md  review-final-2026-06-15.md  review-pre-release-2026-06-15.md  why-use-make.md
kb/: 9base-research.md  audit-report.md  cargo-make-research.md  implementation-comparison.md  mk-implementations.md  mk-ports.md  mk-spec.md  philosophical-audit.md  scripting-languages.md  testdata-inventory.md  uutils-research.md
scripts/: release.sh
testdata/hello/: hello.c
testdata/regression-mre/: bug-A-pct-no-prereq.mkfile  bug-B-amp-metarule.mkfile
