[package]
name = "mk-rs"
version = "0.1.0"
edition = "2021"
description = "mk-rust CLI: Plan 9 mk compatible command-line tool"
license = "MIT"
repository = "https://github.com/YOU/mk-rs"
keywords = ["mk", "make", "build", "plan9"]
categories = ["development-tools::build-utils"]

[features]
default = []
duckscript = ["mk-rs-shell/duckscript"]

[dependencies]
mk-rs-core = { path = "../mk-core", version = "0.1.0" }
mk-rs-shell = { path = "../mk-shell", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "mk"
path = "src/main.rs"
