[package]
name = "mk-rs-core"
version = "0.1.0"
edition = "2021"
description = "mk-rust core: lexer, parser, DAG builder, scheduler"
license = "MIT"
repository = "https://github.com/YOU/mk-rs"
keywords = ["mk", "make", "build", "plan9"]
categories = ["development-tools::build-utils"]

[dependencies]
thiserror = "2"
regex = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
