[package]
name = "mk-rs-core"
version = "0.2.2"
edition = "2021"
description = "mk-rust core: lexer, parser, DAG builder, scheduler"
license = "MIT"
repository = "https://github.com/e4779/mk-rs"
documentation = "https://docs.rs/mk-rs-core"
keywords = ["mk", "make", "build", "plan9"]
categories = ["development-tools::build-utils"]

[dependencies]
thiserror = "2"
regex = "1"
glob = "0.3"

[package.metadata.docs.rs]
all-features = true
