[package]
name = "mk-graph"
version = "0.1.3"
edition = "2021"
description = "Graph visualization for mk-rs: JSON, DOT export"
license = "MIT"
repository = "https://github.com/YOU/mk-rs"
keywords = ["mk", "graph", "dot", "json", "visualization"]
categories = ["development-tools::build-utils"]

[dependencies]
mk-rs-core = { path = "../mk-core", version = "0.1.3" }
mk-rs-shell = { path = "../mk-shell", version = "0.1.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "mk-graph"
path = "src/main.rs"
