[package]
name = "mk-graph"
version = "0.2.1"
edition = "2021"
description = "Graph visualization for mk-rs: ASCII, Mermaid, DOT, JSON export"
license = "MIT"
repository = "https://github.com/YOU/mk-rs"
keywords = ["mk", "graph", "ascii", "mermaid", "visualization"]
categories = ["development-tools::build-utils"]

[dependencies]
mk-rs-core = { path = "../mk-core", version = "0.2.1" }
mk-rs-shell = { path = "../mk-shell", version = "0.2.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ascii-dag = "0.9"

[[bin]]
name = "mk-graph"
path = "src/main.rs"
