[package]
name = "mk-graph"
version = "0.2.4"
edition = "2021"
description = "Graph visualization for mk-rs: ASCII, Mermaid, DOT, JSON export"
license = "MIT"
repository = "https://github.com/e4779/mk-rs"
documentation = "https://docs.rs/mk-graph"
keywords = ["mk", "graph", "ascii", "mermaid", "visualization"]
categories = ["development-tools::build-utils"]

[dependencies]
mk-rs-core = { path = "../mk-core", version = "0.2.2" }
mk-rs-shell = { path = "../mk-shell", version = "0.2.2" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ascii-dag = "0.9"

[[bin]]
name = "mk-graph"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
