[package]
name = "mk-rs-shell"
version = "0.1.5"
edition = "2021"
description = "Shell abstraction for mk: sh, rc implementations"
license = "MIT"
repository = "https://github.com/YOU/mk-rs"
keywords = ["mk", "make", "build", "plan9"]
categories = ["development-tools::build-utils"]

[features]
duckscript = ["dep:duckscript", "dep:duckscriptsdk"]

[dependencies]
mk-rs-core = { path = "../mk-core", version = "0.1.5" }
duckscript = { version = "0.10", optional = true }
duckscriptsdk = { version = "0.11", optional = true }
